--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\Enemy\S_SpawnEnemy.cs" />
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\VariableJoystick.cs" />
     <Compile Include="Assets\Scripts\Player\S_Player.cs" />
+    <Compile Include="Assets\Scripts\Money\S_Money.cs" />
     <Compile Include="Assets\Joystick Pack\Examples\JoystickSetterExample.cs" />
     <Compile Include="Assets\Scripts\Enemy\S_BaseEnemy.cs" />
     <Compile Include="Assets\Scripts\Victory\S_Victory.cs" />
